--- a/P004253.opf/meta.yml
+++ b/P004253.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004253
+id: P004253
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN2194
   title: གསུང་འབུམ། ལྷ་རྩེ་བ་ངག་དབང་བཟང་པོ།
-  volume: ''
   author: ''
+  volumes: {}
