--- a/P004253.opf/layers/v001/Pagination.yml
+++ b/P004253.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: ea657788ec674548a681c94eb3b1d2a0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   54d762469d5948bfa1a9875145b6a6d9:
