--- a/P004253.opf/layers/v002/Pagination.yml
+++ b/P004253.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: e915e525aa2240b99fd5484030928d59
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   df3522ff8ca04ea6a59d9df4d548e1de:
