--- a/P004253.opf/meta.yml
+++ b/P004253.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004253
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W3CN2194
   title: གསུང་འབུམ། ལྷ་རྩེ་བ་ངག་དབང་བཟང་པོ།
